# feedback-tracking-tool

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.conf.production  package-lock.json  package.json  readme.md
rs-backend/: .env  .gitignore  Cargo.toml  nginx.conf  readme.md
rs-backend/.sqlx/: query-0c64242359fc89b2856ecf30d690aec464eb1078f42294eb60d395c6d60266d7.json  query-11362ab66c853c076e1f63143365d0eab71f240bcf622d9157ea35784bae848d.json  query-1220d15a56dbf823eaa452fbafa17442ab0568bc81a31fa38e16e3df3278e5f9.json  query-157f990ef644d1d6326c9eb92669118dff300b17dcef0b986733744220670cae.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-29356ceade5be500173e8655241a35973a4333a3d19ec0b9e3dfabbd0bc97b8c.json  query-2af3a38bd860a884d3e5c6399b1794224cd0a910ce4fac6d8b122f4ae1765b29.json  query-2d92e1d687b915d31d9baf9b6c663bcf8cb08167dacd0f2d69b154d3385c3770.json  query-334f9d20f95c4d25ef5a02ada9c56a8b53ee278bf3c5c49be099504635a432be.json  query-3dd6be009eafd44dc62555c89788bba64e24e8668bbc595994c9f6235a0ce045.json  query-4af51cae067b9558b0121ed77cfcbd57e62d1fa2ec950f66fa3be7099f0b1cc8.json  query-5f6aeff32bf3034f2490b396d4f8677198bf5f6ef7be2bde976bb9eef06e2acc.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-6a06a223f38289603fb34d5e22a7788359e20a4fc641e1f375b13fc07547ce92.json  query-7a533c5aa6e0fabf7d65f2ca5854965c964900dc5090e4c862a1ed9f5aacb3b4.json  query-7ece192cbc34a6382a935a43f022bebcce47e2a5c48e57b99d292e8551df4f75.json  (+14 more)
rs-backend/src/: app.rs  lib.rs  (+1 more)
(+103 files in other folders)
