[package]
name = "rs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio", "macros"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "openapi_extensions"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
tower = "0.5"
hyper = { version = "0.14", features = ["full"] }
http-body = "1.0.1"
colored = "3.0.0"

[dev-dependencies]
axum-test = "17.3.0"
